--- a/yelp_classification.ipynb
+++ b/yelp_classification.ipynb
@@ -1592,22 +1592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1-micro has value: 0.83\n",
-      "F1-macro has value: 0.82\n",
-      "Hamming loss: 0.18\n",
-      "Exact match ratio: 0.23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "br = BinaryRelevance(\n",
+    "br = ClassifierChain(\n",
     "    classifier = LogisticRegression(random_state=42, penalty='elasticnet', solver='saga', l1_ratio=0.2),\n",
     "    require_dense = [False, True]\n",
     ")\n",
@@ -1664,7 +1653,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
